More updates. Added html-in-react lib for convenience.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "AI Days",
-  "name": "AI Days @ HES-SO",
+  "short_name": "AI Days@HES-SO",
+  "name": "AI Days@HES-SO",
   "icons": [
     {
       "src": "favicon.ico",
