--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "html-react-parser": "^5.1.18"
   },
   "scripts": {
     "start": "react-scripts start",
