--- a/kubernetes/ingress.yml
+++ b/kubernetes/ingress.yml
@@ -6,16 +6,14 @@ metadata:
     cert-manager.io/issuer: "letsencrypt"
     nginx.ingress.kubernetes.io/proxy-body-size: "16m"
     nginx.org/client-max-body-size: "16m"
-    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
-    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: nginx
   rules:
     - host: ai-days.swiss-ai-center.ch
       http:
         paths:
-          - path: "/?(.*)"
-            pathType: ImplementationSpecific
+          - path: /
+            pathType: Prefix
             backend:
               service:
                 name: ai-days-website-service
